# Nmap Changelog ($Id$); -*-text-*-

o [Ncat] Ncat now keeps running in connect mode after receiving EOF
  from the remote socket, unless --recv-only is in effect.
  [Tomas Hozza]

o Routes are now sorted to prefer those with a lower metric. Retrieval
  of metrics is supported only on Linux and Windows. [David Fifield]

o Packet trace of ICMP packets now include the ICMP ID and sequence
  number by default. [David Fifield]

o [NSE] Added ike-version and a new ike library by Jesper Kückelhahn. Thanks
  also go to Roy Hills, who allowed the use of the signature database from
  the ike-scan tool.

o [NSE] Fixed various NSEDoc bugs found by David Matousek.

o [Zenmap] Zenmap now understands the NMAP_PRIVILEGED and
  NMAP_UNPRIVILEGED environment variables. [Tyler Wagner]

o It's now possible to mix IPv4 range notation with CIDR netmasks in
  target specifications. For example, 192.168-170.4-100,200.5/16 is
  effectively the same as 192.168.168-170.0-255.0-255. [David Fifield]

o Added nmap-fo.xsl, contributed by Tilik Ammon. This converts Nmap
  XML into XSL-FO, which can be converted into PDF using Apache FOP.

o Increased the number of slack file descriptors not used during connect
  scan. Previously, the calculation did not consider the descriptors
  used by various open log files. Connect scans using a lot of sockets
  could fail with the message "Socket creation in sendConnectScanProbe:
  Too many open files". [David Fifield]

o [Zenmap] Fixed internationalization files. Running in a language
  other than the default English would result in the error
  "ValueError: too many values to unpack". [David Fifield]

o Changed the --webxml XSL stylesheet to point to the new location of
  nmap.xsl in the new respository,
    https://svn.nmap.org/nmap/docs/nmap.xsl
  This was noticed by Simon John.

o [NSE] Made the vulnerability library able to preserve vulnerability
  information across multiple ports of the same host. The bug was
  reported by iphelix. [Djalal Harouni]
